src/test/ui/span/send-is-not-static-ensures-scoping.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-ensures-scoping.rs:16:18
   |
LL |         let y = &x;
   |                  ^ borrowed value does not live long enough
...
LL |     };
   |     - `x` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error[E0597]: `y` does not live long enough
  --> $DIR/send-is-not-static-ensures-scoping.rs:20:22
   |
LL |         scoped(|| {
   |                -- capture occurs here
LL |             let _z = y;
   |                      ^ borrowed value does not live long enough
...
LL |     };
   |     - borrowed value only lives until here
...
LL | }
   | - borrowed value needs to live until here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
